variables.RunHalf.scala.error
Compilation error:
RunHalf:3: error: ambiguous reference to overloaded definition,
both method * in class Int of type (x: Char)Int
and  method * in class Int of type (x: Byte)Int
match expected type ?
while(2*estSurBiscuit = estSurOrange + 1) {
       ^RunHalf:3: error: type mismatch;
 found   : Int(1)
 required: String
while(2*estSurBiscuit = estSurOrange + 1) {
                                       ^